--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: build and push the image
         run: |
-              docker login --username mdimura --password ${{ secrets.GHCR_TKN }} ghcr.io
+              docker login --username mdimura --password ${{ secrets.GITHUB_TOKEN }} ghcr.io
               for tag in base qt5; do
                 docker build . --build-arg DOCKER_TAG=${tag} --tag ghcr.io/mdimura/docker-mingw-arch:${tag}
                 docker push ghcr.io/mdimura/docker-mingw-arch:${tag}
