--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,8 @@ name: docker image CI for ghcr
 
 on: [push]
 env:
-  IMAGE_NAME: ghcr.io/${{ github.repository }}
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ env.REGISTRY }}/${{ github.repository }}
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
@@ -13,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: build and push the image
         run: |
-              docker login --username ${{ github.actor }} --password ${{ secrets.GITHUB_TOKEN }} ${{ env.REGISTRY }}
+              echo "${{ secrets.GITHUB_TOKEN }}" | docker login ${{ env.REGISTRY }} --username ${{ github.actor }} --password-stdin
               for tag in base qt5; do
                 docker build . --build-arg DOCKER_TAG=${tag} --tag ${{ env.IMAGE_NAME }}:${tag}
                 docker push ${{ env.IMAGE_NAME }}:${tag}
